Fixed the flags.  so it wont collapse

--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -38,6 +38,10 @@ font-size: 27px;
 	margin-top:5px;
 }
 
+.flags {
+	order: 1;
+}
+
 @media only screen and (max-width: 768px) {
     .gamepad {
 		margin-top: 20px;
@@ -45,4 +49,8 @@ font-size: 27px;
 	.svflag, .ukflag{
 		margin: 20px 0;
 	}
+	.flags {
+		order: 0;
+	}
+	
 }
